[gd_scene load_steps=2 format=3 uid="uid://chdukmmwul13m"]

[ext_resource type="Script" path="res://multiplayer_controller.gd" id="1_plqwc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plqwc")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 324.0
offset_right = 442.0
offset_bottom = 355.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 488.0
offset_top = 324.0
offset_right = 626.0
offset_bottom = 355.0
text = "Join"

[node name="StartButton" type="Button" parent="."]
offset_left = 671.0
offset_top = 324.0
offset_right = 809.0
offset_bottom = 355.0
text = "Start"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartButton" to="." method="_on_start_button_down"]
